--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1F2226" />
-    <meta
-      name="description"
-      content="PTFS Charts"
-    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>PTFS Charts</title>
+    <title>PTFS - Pilot Training Flight Simulator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
